--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     // Use Scala 2.13 in our library project
     implementation 'org.scala-lang:scala-library:2.13.9'
+    implementation group: 'org.scala-lang.modules', name: 'scala-swing_2.13', version: '3.0.0'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
